--- a/mod_5_project.ipynb
+++ b/mod_5_project.ipynb
@@ -29,7 +29,9 @@
      "end_time": "2019-12-30T05:40:06.935050Z",
      "start_time": "2019-12-30T05:40:03.375323Z"
     },
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "#df.head()"
+    "df.head()"
    ]
   },
   {
@@ -169,7 +171,14 @@
    },
    "outputs": [],
    "source": [
-    "#pandas_profiling.ProfileReport(df)"
+    "pandas_profiling.ProfileReport(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Are any areas impacted significantly more than others?"
    ]
   },
   {
@@ -183,7 +192,14 @@
    },
    "outputs": [],
    "source": [
-    "#df.plot(kind=\"scatter\", x=\"Longitude\", y=\"Latitude\", alpha= 0.1)"
+    "df.plot(kind=\"scatter\", x=\"Longitude\", y=\"Latitude\", alpha= 0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Are feature data normally distributed?"
    ]
   },
   {
@@ -197,42 +213,15 @@
    },
    "outputs": [],
    "source": [
-    "#df.hist(figsize=(20,15), bins=30);"
+    "df.hist(figsize=(20,15), bins=30);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-12-30T05:40:09.542328Z",
-     "start_time": "2019-12-30T05:40:09.533689Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Accident_Index', 'Latitude', 'Longitude', 'Region',\n",
-       "       'Urban_or_Rural_Area', 'X1st_Road_Class', 'Driver_IMD_Decile',\n",
-       "       'Speed_limit', 'Road_Type', 'Road_Surface_Conditions', 'Weather',\n",
-       "       'High_Wind', 'Lights', 'Datetime', 'Year', 'Season', 'Month_of_Year',\n",
-       "       'Day_of_Month', 'Day_of_Week', 'Hour_of_Day', 'Number_of_Vehicles',\n",
-       "       'Age_of_Driver', 'Age_of_Vehicle', 'Junction_Detail',\n",
-       "       'Junction_Location', 'X1st_Point_of_Impact', 'Driver_Journey_Purpose',\n",
-       "       'Engine_CC', 'Propulsion_Code', 'Vehicle_Make', 'Vehicle_Category',\n",
-       "       'Vehicle_Manoeuvre', 'Accident_Severity'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -339,6 +328,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-30T05:40:09.542328Z",
+     "start_time": "2019-12-30T05:40:09.533689Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Accident_Index', 'Latitude', 'Longitude', 'Region',\n",
+       "       'Urban_or_Rural_Area', 'X1st_Road_Class', 'Driver_IMD_Decile',\n",
+       "       'Speed_limit', 'Road_Type', 'Road_Surface_Conditions', 'Weather',\n",
+       "       'High_Wind', 'Lights', 'Datetime', 'Year', 'Season', 'Month_of_Year',\n",
+       "       'Day_of_Month', 'Day_of_Week', 'Hour_of_Day', 'Number_of_Vehicles',\n",
+       "       'Age_of_Driver', 'Age_of_Vehicle', 'Junction_Detail',\n",
+       "       'Junction_Location', 'X1st_Point_of_Impact', 'Driver_Journey_Purpose',\n",
+       "       'Engine_CC', 'Propulsion_Code', 'Vehicle_Make', 'Vehicle_Category',\n",
+       "       'Vehicle_Manoeuvre', 'Accident_Severity'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
@@ -370,9 +393,7 @@
      "end_time": "2019-12-30T05:40:10.013097Z",
      "start_time": "2019-12-30T05:40:10.009569Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
